--- a/views/bg.ejs
+++ b/views/bg.ejs
@@ -1,6 +1,6 @@
 <style>
   .bg {
-    background-image: url('/public/assets/bg.png');
+    /** background-image: url('/public/assets/bg.png'); */
     width: 100%;
     height: 100%;
     position: fixed;
