--- a/views/render/category.ejs
+++ b/views/render/category.ejs
@@ -19,7 +19,7 @@ const href_template = '/category?id=' + locals.query.id + '&p={{page}}';
 
     .category-container {
       background-color: white;
-      padding: 24px 0px;
+      padding: 24px 0px; 
       border-radius: 4px;
     }
 
@@ -36,46 +36,19 @@ const href_template = '/category?id=' + locals.query.id + '&p={{page}}';
       margin: 0px 4px;
     }
 
-
-    .post {
-      padding: 6px;
-      display: flex;
-      border-bottom: 1px solid #eaeaea;
+    .statistic{
+      padding: 2px 6px;
+      border: 1px solid #eaeaea;
+      border-radius: 4px; 
     }
 
-    .post .statistics {
-      padding: 0px 6px;
-      font-size: 14px;
-      white-space: nowrap;
-    }
 
-    .post .title a {
-      font-size: 15px;
-      font-weight: bold;
-      color: #3a3a3a !important;
-    }
-
-    .post .description {
-      font-size: 13px;
-      min-width: 300px;
-      color: #666;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
-    }
-
-    .title a:hover {
-      text-decoration: underline !important;
-    }
-
-    .post:hover {
-      background-color: #f9f9f9;
+    .statistic + .statistic{
+        margin-left: 8px;
     }
 
     @media screen and (max-width: 768px) {
-      .category-container {
-        padding: 0px;
-      }
+      
     }
   </style>
 
@@ -83,7 +56,7 @@ const href_template = '/category?id=' + locals.query.id + '&p={{page}}';
 
 <body>
   <%- include('/views/menus') %>
-  <div class="container category-container ">
+  <div class="container p-1 pb-3 pt-3 category-container ">
     <div class="m-auto" style="max-width: 1200px;">
       <div class="breadcrumbs p-1 p-lg-2">
         <span class="breadcrumb"><a href="/">首页</a></span>
@@ -92,58 +65,51 @@ const href_template = '/category?id=' + locals.query.id + '&p={{page}}';
       </div>
       <div class="d-flex">
         <div class="flex-auto">
-          <img style="max-width: 86px;" src="<%= category.icon %>">
+          <img style="max-width: 64px;" src="<%= category.icon %>">
         </div>
-        <div class="felx-fill ms-lg-2 d-flex flex-wrap align-items-center">
-          <div class="col-12 fs-1"><%= category.name %></div>
-          <div class="leap col-12"><%= category.description %></div>
+        <div class="felx-fill ms-lg-2  d-flex flex-wrap  align-items-center">
+          <h3 class="col-12 mb-0" ><%= category.name %></h3>
         </div>
       </div>
 
-      <hr class="mb-0">
+      <div class="leap  text-secondary "><%= category.description %></div>
 
-      <div class="p-1 p-lg-2">
-        <div class="mt-2">
-          <a href="/post/editor?category_uid=<%= category.uid %>"><button class="btn btn-primary">发表帖子 +</button></a>
+      <div class="mt-2">
+        <small class="statistic"> 帖子 <span class="fw-bold"><%= unit.count(category.statistics.posts) %></span></small>
+        <small class="statistic"> 回帖 <span class="fw-bold"><%= unit.count(category.statistics.comments) %></span></small>
+      </div>
+
+      <hr >
+
+      <div class=" ">
+        <div class="mt-2 mb-3 d-flex gap-2"> 
+          <div class="flex-fill">
+            <div>
+              <select class="form-select form-select-sm" style="width:120px;">
+                <option value="recent-post" selected>最近发布</option>
+                <option value="recent-comment">最近回帖</option>
+                <option value="most-view">最多浏览</option>
+                <option value="most-comment">最多评论</option>
+                <option value="most-collect">最多收藏</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="flex-auto">
+            <div>
+              <a href="/post/editor?category_uid=<%= category.uid %>"><button class="btn btn-sm btn-primary">发表帖子 +</button></a>
+            </div>
+          </div> 
         </div>
+
 
         <div class="mt-2">
           <%- include('/views/components/pagination.ejs',{ total_page: total_page, current: locals.query?.p || '1' ,href_template:  href_template }) %>
         </div>
 
-
         <div class="mt-2">
-          <% if (locals.posts?.length) { %>
-          <div class="posts">
-            <% for (let i = 0 ;i < locals.posts.length; i++) {  %>
-            <% const item = locals.posts[i]; %>
-            <div class="mb-1">
-              <div class="post">
-                <div class="info flex-fill">
-                  <div class="title"><a class=" text-decoration-none d-inline-block w-100" href="/p/<%= item.short_id %>"><%= item.title %></a></div>
-                  <div class="description">
-                    <a href="/u/<%= item.user.account  %>"><%= item.user.account %></a>
-                    <span>：<%= item.text.length > 100 ? item.text.slice(0,200) + '...' :  item.text %></span>
-                  </div>
-                  <div>
-                    <small>最新回帖：<%= item.user.account %></small>
-                  </div>
-                </div>
-                <div class="statistics text-secondary flex-auto">
-                  <div>查看 : <%= item.statistics.views %></div>
-                  <div>回帖 : <%= item.statistics.comments  %></div>
-                </div>
-              </div>
-            </div>
-            <% } %>
-          </div>
-          <% } else { %>
-          <div>
-            <%= i18n('_dict_.no_data') %>
-          </div>
-          <% } %>
+          <%- include('/views/components/post.list.ejs', { posts: locals.posts}) %>
         </div>
-
 
         <div class="mt-2">
           <%- include('/views/components/pagination.ejs',{ total_page: total_page, current: locals.query?.p || '1' , href_template: href_template}) %>
