--- a/views/components/post.list.ejs
+++ b/views/components/post.list.ejs
@@ -61,7 +61,7 @@
   <% } %>
 </div>
 <% } else { %>
-<div>
-  <%= i18n('_dict_.no_data') %>
+<div class="p-2 text-center border rounded"> 
+  <p class="card-text"><%= i18n('_dict_.no_data') %></p>
 </div>
 <% } %>
