--- a/views/post/post.ejs
+++ b/views/post/post.ejs
@@ -28,14 +28,11 @@ const href_template =  `/p/${post.short_id}?p={{page}}`
   .breadcrumbs {
     display: flex
   }
-
-  .post-breadcrumb a {
+ 
+  .breadcrumb a {
     color: #1b6091 !important;
   }
-
-  .post-breadcrumb-split {
-    margin: 0px 4px;
-  }
+ 
 
   .post .title {
     font-size: 22px;
