--- a/views/render/category.ejs
+++ b/views/render/category.ejs
@@ -19,7 +19,7 @@ const href_template = '/category?id=' + locals.query.id + '&p={{page}}';
 
     .category-container {
       background-color: white;
-      padding: 24px 0px; 
+      padding: 24px 0px;
       border-radius: 4px;
     }
 
@@ -36,20 +36,18 @@ const href_template = '/category?id=' + locals.query.id + '&p={{page}}';
       margin: 0px 4px;
     }
 
-    .statistic{
+    .statistic {
       padding: 2px 6px;
       border: 1px solid #eaeaea;
-      border-radius: 4px; 
+      border-radius: 4px;
     }
 
 
-    .statistic + .statistic{
-        margin-left: 8px;
+    .statistic+.statistic {
+      margin-left: 8px;
     }
 
-    @media screen and (max-width: 768px) {
-      
-    }
+    @media screen and (max-width: 768px) {}
   </style>
 
 </head>
@@ -68,7 +66,7 @@ const href_template = '/category?id=' + locals.query.id + '&p={{page}}';
           <img style="max-width: 64px;" src="<%= category.icon %>">
         </div>
         <div class="felx-fill ms-lg-2  d-flex flex-wrap  align-items-center">
-          <h3 class="col-12 mb-0" ><%= category.name %></h3>
+          <h3 class="col-12 mb-0"><%= category.name %></h3>
         </div>
       </div>
 
@@ -79,11 +77,11 @@ const href_template = '/category?id=' + locals.query.id + '&p={{page}}';
         <small class="statistic"> 回帖 <span class="fw-bold"><%= unit.count(category.statistics.comments) %></span></small>
       </div>
 
-      <hr >
+      <hr>
 
-      <div class=" ">
-        <div class="mt-2 mb-3 d-flex gap-2"> 
-          <div class="flex-fill">
+      <div class="text-nowrap">
+        <div class="mt-2 mb-2 d-flex gap-2">
+          <div class="flex-fill d-flex gap-2">
             <div>
               <select class="form-select form-select-sm" style="width:120px;">
                 <option value="recent-post" selected>最近发布</option>
@@ -93,13 +91,24 @@ const href_template = '/category?id=' + locals.query.id + '&p={{page}}';
                 <option value="most-collect">最多收藏</option>
               </select>
             </div>
+
+            <div>
+              <form action="/post/search" method="post">
+                <div class="input-group ">
+                  <input type="hidden" name="category_uid" value="<%= category.uid %>">
+                  <input type="text" name="value"  class="form-control form-control-sm" placeholder="搜索此分区下帖子..." aria-describedby="button-addon2">
+                  <button class="btn btn-sm btn-outline-secondary" type="submit" >搜索</button>
+                </div>
+              </form>
+            </div>
           </div>
+
 
           <div class="flex-auto">
             <div>
               <a href="/post/editor?category_uid=<%= category.uid %>"><button class="btn btn-sm btn-primary">发表帖子 +</button></a>
             </div>
-          </div> 
+          </div>
         </div>
 
 
